# Copyright 2014 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//chrome/common/features.gni")
import("//third_party/protobuf/proto_library.gni")

if (is_android) {
  import("//build/config/android/rules.gni")
}

proto_library("probe_message_proto") {
  sources = [ "probe_message.proto" ]
}

proto_library("key_pinning_proto") {
  sources = [
    "key_pinning.proto",
    "kp_timestamp.proto",
  ]
}

if (is_android) {
  java_cpp_enum("secure_dns_management_mode_generated_enum") {
    sources = [ "secure_dns_config.h" ]
  }
}

# Add your new source files here
source_set("custom_url_loader") {
  sources = [
    "custom_url_loader.cc",
    "custom_url_loader.h",
    "custom_url_loader_factory.cc",
    "custom_url_loader_factory.h",
  ]

  deps = [
    "//services/network/public/mojom",
    "//mojo/public/cpp/bindings",
    "//net",
    "//chrome/browser/net",
  ]

  public_deps = [
    "//services/network/public/mojom:url_loader_factory",
  ]
}

# Add the new target to the main net component
component("net") {
  sources = [
    # Existing sources...
  ]
  
  deps = [
    # Existing deps...
    ":custom_url_loader",
  ]
}